removed unnecessary p style

--- a/article.css
+++ b/article.css
@@ -3,31 +3,6 @@
 
 }
 
-#p1 {
-  width: 800px;
-  padding: 5px;
-  margin: 25px 25px;
-
-}
-#p2 {
-  width: 800px;
-  padding: 5px;
-  margin: 25px 25px;
-
-}
-#p3 {
-  width: 800px;
-  padding: 5px;
-  margin: 25px 25px;
-
-}
-#p4 {
-  width: 800px;
-  padding: 5px;
-  margin: 25px 25px;
-
-}
-
 .about-me h2 {
   width: 800px;
   padding: 5px;
@@ -41,4 +16,10 @@
 
 #p2 a:hover {
   color: lime;
+}
+
+p {
+  width: 800px;
+  padding: 5px;
+  margin: 25px 25px;
 }
