--- a/main.css
+++ b/main.css
@@ -4,9 +4,17 @@
   box-sizing: border-box;
 }
 
-.container{
+.container {
   max-width: 1024px;
   margin: 0 auto;
+}
+
+body {
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: start;
+  color: #f6f6f6;
+  background-color: #191919;
 }
 
 ul {
@@ -14,8 +22,9 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333333;
-  opacity: 0.75;
+  background-color: #191919;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
 }
 
 li {
@@ -24,43 +33,20 @@ li {
 
 li a {
   display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
+  color: #f6f6f6;
+  text-align: start;
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: normal;
+  padding: 20px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111111;
+  border-bottom: 1px solid rgba(255, 255, 255, 1.0);
 }
 
-body {
-  font-family: 'Rubik' , sans-serif;
-  background-color: gray ;
-  color: white;
+.nav {
+  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
 }
-
-.name {
-  width: 800px;
-  padding: 5px;
-  margin: 25px 25px;
-  border-bottom: 1px solid rgba(red, green, blue, alpha);
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.name h1 {
-  font-size: 45px;
-}
-
-h3 a {
-  color: limegreen;
-}
-
-h3 a:hover {
-  color: lime;
-}
-
 
