--- a/main.css
+++ b/main.css
@@ -25,11 +25,9 @@ ul {
   background-color: #191919;
   font-family: 'Inter', sans-serif;
   font-size: 14px;
+  display: flex;
 }
 
-li {
-  float: left;
-}
 
 li a {
   display: block;
@@ -40,13 +38,30 @@ li a {
   letter-spacing: normal;
   padding: 20px;
   text-decoration: none;
+  transition: border 2s ease-out;
+  border-bottom: 2px solid rgba(255, 255, 255, 0);
+
 }
 
 li a:hover {
-  border-bottom: 1px solid rgba(255, 255, 255, 1.0);
+  border-bottom: 2px solid rgba(255, 255, 255, 1.0);
+
 }
+
 
 .nav {
   border-bottom: 1px solid rgba(44, 44, 44, 0.70);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+}
+
+
 
