--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ h5 {
 }
 
 .highlight {
-  color: #dff962;
+  color: #3083DC;
 }
 
 .about-me {
@@ -111,7 +111,7 @@ h5 {
 }
 
 .about-me a {
-  color: #dff962;
+  color: #3083DC;
   font-weight: 500;
   text-decoration: none;
 
