--- a/main.css
+++ b/main.css
@@ -121,3 +121,20 @@ h5 {
   font-size: 16px;
   line-height: 1.5;
 }
+
+.skills {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  height: 97px;
+  border-bottom: 1px solid rgba(44, 44, 44, 0.7);
+  padding: 30px 0;
+}
+
+.skills li {
+  font-size: 30px;
+  height: 36px;
+  font-family: 'Inter', sans-serif;
+  color: #3f3f3f;
+  font-weight: 500;
+}
