--- a/main.css
+++ b/main.css
@@ -136,5 +136,56 @@ h5 {
   height: 36px;
   font-family: 'Inter', sans-serif;
   color: #3f3f3f;
+  font-weight: bold;
+}
+
+.topics h5 {
+  font-family: 'Inter', sans-serif;
+  font-size: 18.622px;
+  margin: 20px 0;
+}
+
+.topics p {
+  font-size: 16px;
+  height: 20px;
+  margin: 16px 0;
+}
+
+.today-i-learned {
+  height: 406px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 30px;
+}
+
+.blogs {
+  width: 389px;
+  height: 366px;
+  border: 2px solid rgba(44, 44, 44, 1);
+  border-radius: 10px;
+  margin: 5px 5px;
+}
+
+footer {
+  background-color: #212121;
+  padding: 12px 0;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.name {
+  color: #f6f6f6;
+  font-size: 16px;
   font-weight: 500;
+}
+
+.copyright {
+  font-size: 15px;
+  color: rgb(167, 167, 167);
 }
