--- a/main.css
+++ b/main.css
@@ -129,6 +129,8 @@ h5 {
   height: 97px;
   border-bottom: 1px solid rgba(44, 44, 44, 0.7);
   padding: 30px 0;
+  overflow-x: auto;
+  gap: 10px;
 }
 
 .skills li {
