--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 .container {
   max-width: 1195px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 body {
@@ -159,6 +160,7 @@ h5 {
   display: flex;
   flex-direction: row;
   margin-bottom: 30px;
+  gap: 10px;
 }
 
 .blogs {
@@ -166,7 +168,6 @@ h5 {
   height: 366px;
   border: 2px solid rgba(44, 44, 44, 1);
   border-radius: 10px;
-  margin: 5px 5px;
 }
 
 footer {
@@ -190,4 +191,15 @@ footer {
 .copyright {
   font-size: 15px;
   color: rgb(167, 167, 167);
+}
+
+@media screen and (max-width:1195px) {
+  .today-i-learned {
+    flex-direction: column;
+  }
+
+  .blogs {
+    width: 100%;
+
+  }
 }
