--- a/main.css
+++ b/main.css
@@ -142,6 +142,50 @@ h5 {
   font-weight: bold;
 }
 
+.topic h5 {
+  font-family: 'Inter', sans-serif;
+  font-size: 18.622px;
+  font-weight: 500;
+  margin: 20px 0;
+}
+
+.topic p {
+  font-size: 16px;
+  height: 20px;
+  margin: 16px 0;
+}
+
+.my-links {
+  display: flex;
+  flex-direction: row;
+  height: 406px;
+  padding: 20px 0;
+  margin-bottom: 30px;
+  justify-content: space-between;
+}
+
+.linktree {
+  width: 100%;
+  height: 300px;
+  border: 2px solid rgba(44, 44, 44, 1);
+  border-radius: 33px;
+}
+
+.insta img {
+  width: 100%;
+  height: 280px;
+}
+
+.btn-insta button {
+  width: 300px;
+  height: 45px;
+  border: 1px;
+  border-radius: 33px;
+  margin-top: 5px;
+  background-color: #3083DC;
+}
+
+
 
 
 footer {
@@ -167,6 +211,7 @@ footer {
   font-size: 15px;
   color: rgb(167, 167, 167);
 }
+
 
 
 
