--- a/main.css
+++ b/main.css
@@ -158,8 +158,7 @@ h5 {
 .my-links {
   display: flex;
   flex-direction: row;
-  height: 360px;
-  width: 300px;
+  height: 100px;
   padding: 20px 0;
   margin-bottom: 30px;
   justify-content: space-between;
@@ -168,6 +167,11 @@ h5 {
 .btn {
   width: 300px;
   cursor: pointer;
+  border: 1px solid #3083DC;
+  border-radius: 33px;
+  background-color: #3083DC;
+  color: #f6f6f6;
+  font-size: large;
 }
 
 
@@ -202,13 +206,13 @@ footer {
 
 
 /* Might need later */
-/* @media screen and (max-width:1195px) {
-  .today-i-learned {
+@media screen and (max-width:1195px) {
+  .my-links {
     flex-direction: column;
   }
 
-  .blogs {
+  .btn {
     width: 100%;
-
   }
-} */
+
+}
