--- a/main.css
+++ b/main.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+.fullheight {
+  min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
 .container {
   max-width: 1195px;
   margin: 0 auto;
@@ -124,17 +131,18 @@ h5 {
 }
 
 .skills {
-  list-style-type: none;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   height: 97px;
   border-bottom: 1px solid rgba(44, 44, 44, 0.7);
   padding: 30px 0;
-  overflow-x: auto;
   gap: 10px;
+  overflow-x: auto;
 }
 
-.skills li {
+
+.skills p {
   font-size: 30px;
   height: 36px;
   font-family: 'Inter', sans-serif;
@@ -171,15 +179,14 @@ h5 {
   border-radius: 33px;
   background-color: #3083DC;
   color: #f6f6f6;
-  font-size: large;
 }
-
-
 
 
 footer {
   background-color: #212121;
   padding: 12px 0;
+  height: 46px;
+
 }
 
 .footer {
@@ -187,7 +194,6 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .name {
@@ -200,8 +206,6 @@ footer {
   font-size: 15px;
   color: rgb(167, 167, 167);
 }
-
-
 
 
 
