--- a/main.css
+++ b/main.css
@@ -17,6 +17,10 @@
   padding: 0 10px;
 }
 
+.wrapper {
+  overflow-y: auto;
+}
+
 body {
   text-align: start;
   color: #f6f6f6;
@@ -168,23 +172,30 @@ h5 {
   flex-direction: row;
   height: 100px;
   padding: 20px 0;
-  margin-bottom: 30px;
   justify-content: space-between;
+  gap: 5px;
 }
 
-.btn {
-  width: 300px;
+.btn-link button {
   cursor: pointer;
   border: 1px solid #3083DC;
   border-radius: 33px;
+  height: 40px;
+  width: 100%;
   background-color: #3083DC;
   color: #f6f6f6;
+  font-size: 16px;
+}
+
+.btn-link {
+  width: 100%;
 }
 
 footer {
   background-color: #212121;
   padding: 12px 0;
   height: 46px;
+  margin-top: 40px;
 }
 
 .footer {
@@ -209,9 +220,10 @@ footer {
 @media screen and (max-width:1195px) {
   .my-links {
     flex-direction: column;
+    align-items: center;
   }
 
-  .btn {
-    width: 100%;
+  .btn-link {
+    width: 80%;
   }
 }
