--- a/main.css
+++ b/main.css
@@ -169,11 +169,11 @@ h5 {
 
 .btn-link button {
   cursor: pointer;
-  border: 1px solid #3083DC;
+  border: 1px solid #18af34;
   border-radius: 33px;
   height: 40px;
   width: 100%;
-  background-color: #3083DC;
+  background-color: #18af34;
   color: #f6f6f6;
   font-size: 16px;
 }
