--- a/main.css
+++ b/main.css
@@ -55,11 +55,12 @@ li a:hover {
 }
 
 .header {
-  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
+  border-bottom: 2px solid rgba(44, 44, 44, 0.70);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  font-weight: bold;
 }
 
 .socials {
@@ -69,11 +70,11 @@ li a:hover {
 }
 
 .socials svg path {
-  fill: rgb(120, 120, 120);
+  fill: #212121;
 }
 
 .socials svg path:hover {
-  fill: rgb(151, 151, 151);
+  fill: #3d3d3e;
 }
 
 .hero {
@@ -82,7 +83,7 @@ li a:hover {
   flex-direction: column;
   justify-content: center;
   font-family: 'Space Grotesk', sans-serif;
-  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
+  border-bottom: 2px solid rgba(44, 44, 44, 0.70);
 }
 
 h1 {
@@ -101,19 +102,22 @@ h5 {
 }
 
 .highlight {
-  color: #18af34;
+  color: #000000;
 }
 
 .about-me {
   padding: 20px 0;
-  border-bottom: 1px solid rgba(44, 44, 44, 0.70);
+  border-bottom: 2px solid rgba(44, 44, 44, 0.70);
 }
 
 .about-me a {
-  color: #18af34;
+  color: #4345b6;
   font-weight: 500;
-  text-decoration: none;
+  text-decoration: underline;
+}
 
+.about-me a:hover {
+  text-decoration: none;
 }
 
 .ab-content {
@@ -131,7 +135,7 @@ h5 {
   flex-direction: row;
   justify-content: space-between;
   height: 97px;
-  border-bottom: 1px solid rgba(44, 44, 44, 0.7);
+  border-bottom: 2px solid rgba(44, 44, 44, 0.7);
   padding: 30px 0;
   gap: 10px;
   overflow-x: auto;
@@ -169,13 +173,17 @@ h5 {
 
 .btn-link button {
   cursor: pointer;
-  border: 1px solid #18af34;
+  border: 1px solid #212121;
   border-radius: 33px;
   height: 40px;
   width: 100%;
-  background-color: #18af34;
+  background-color: #212121;
   color: #f6f6f6;
   font-size: 16px;
+}
+
+.btn-link button:hover {
+  background-color: #3d3d3e;
 }
 
 .btn-link {
