--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ li a:hover {
 }
 
 .socials svg path:hover {
-  fill: #3d3d3e;
+  fill: #6f6f71;
 }
 
 .hero {
@@ -103,11 +103,16 @@ h5 {
 
 .highlight {
   color: #000000;
+  font-weight: 500;
 }
 
 .about-me {
   padding: 20px 0;
   border-bottom: 2px solid rgba(44, 44, 44, 0.70);
+}
+
+.ab-font {
+  font-weight: bold;
 }
 
 .about-me a {
@@ -153,7 +158,7 @@ h5 {
 .topic h5 {
   font-family: 'Inter', sans-serif;
   font-size: 18.622px;
-  font-weight: 500;
+  font-weight: bold;
   margin: 20px 0;
 }
 
