--- a/main.css
+++ b/main.css
@@ -86,6 +86,11 @@ li a:hover {
   border-bottom: 2px solid rgba(44, 44, 44, 0.70);
 }
 
+.my-face {
+  width: 300px;
+  height: 300px;
+}
+
 h1 {
   font-size: 58.92px;
   font-weight: bold;
@@ -105,6 +110,7 @@ h5 {
   color: #000000;
   font-weight: 500;
 }
+
 
 .about-me {
   padding: 20px 0;
