--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ ul {
   display: flex;
 }
 
-li a {
+header li a {
   display: block;
   color: #191919;
   text-align: start;
@@ -49,7 +49,7 @@ li a {
   border-bottom: 2px solid rgba(255, 255, 255, 0);
 }
 
-li a:hover {
+header li a:hover {
   border-bottom: 2px solid rgba(44, 44, 44, 0.80);
 
 }
@@ -80,19 +80,19 @@ li a:hover {
 .hero {
   height: 300px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   font-family: 'Space Grotesk', sans-serif;
   border-bottom: 2px solid rgba(44, 44, 44, 0.70);
+  align-items: center;
 }
 
 .my-face {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
 }
 
 h1 {
-  font-size: 58.92px;
+  font-size: 70px;
   font-weight: bold;
 }
 
