--- a/main.css
+++ b/main.css
@@ -176,25 +176,34 @@ h5 {
 
 .my-links {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   padding: 20px 0;
-  justify-content: space-between;
   gap: 5px;
+
 }
 
 .btn-link button {
   cursor: pointer;
   border: 1px solid #212121;
-  border-radius: 33px;
-  height: 40px;
-  width: 100%;
+  border-radius: 333px;
+  height: 30px;
+  width: 150px;
   background-color: #212121;
   color: #f6f6f6;
   font-size: 16px;
+  box-shadow: 0px 4px;
 }
 
 .btn-link button:hover {
   background-color: #3d3d3e;
+}
+
+.btn-link button:active {
+  margin-top: 2px;
+  margin-bottom: 2px;
+  box-shadow: 0px 0px;
+  background-color: #3d3d3e;
+  color: #fff;
 }
 
 .btn-link {
