--- a/main.css
+++ b/main.css
@@ -11,16 +11,16 @@
   flex-direction: column;
 }
 
-.container {
+/*.container {
   width: 1195px;
   margin: 0 auto;
   padding: 0 10px;
-}
+}*/
 
 body {
   text-align: start;
   color: #ffffff;
-  background-color: rgb(24, 24, 27);
+  background-color: rgba(24, 24, 27);
 }
 
 body,
@@ -39,15 +39,14 @@ ul {
 }
 
 .header {
-  font-size: 18px;
   line-height: 28px;
   letter-spacing: normal;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  fill: #18181b;
   background-color: #18181b;
-  opacity: 50%;
 }
 
 .header li a {
@@ -60,7 +59,15 @@ ul {
 .hero {
   font-family: InterVariable, Inter, ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  display: flex;
+  flex-direction: row;
   align-items: center;
+  height: 300px;
+}
+
+.tri-style {
+  width: 150px;
+  height: 150px;
 }
 
 .wb-skills {
