--- a/main.css
+++ b/main.css
@@ -4,12 +4,12 @@
   box-sizing: border-box;
 }
 
-.fullheight {
+/*.fullheight {
   min-height: 100vh;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-}
+}*/
 
 /*.container {
   width: 1195px;
@@ -28,6 +28,8 @@ html {
   font-family: InterVariable, Inter, ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
   font-size: 14px;
+  width: 800px;
+  margin: auto;
 }
 
 ul {
@@ -54,20 +56,26 @@ ul {
   text-align: start;
   padding: 20px;
   font-size: 14px;
+  color: #ffffff;
+}
+
+.header li a:active {
+  color: #60a5fa;
+  text-decoration: underline;
 }
 
 .hero {
   font-family: InterVariable, Inter, ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
   align-items: center;
-  width: 800px;
   height: 204px;
-  margin: auto;
+  display: flex;
+  flex-direction: row;
 }
 
 .tri-style {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
 }
 
 .wb-skills {
