--- a/main.css
+++ b/main.css
@@ -12,21 +12,20 @@
 }
 
 .container {
-  width: 640px;
+  width: 1195px;
   margin: 0 auto;
   padding: 0 10px;
 }
 
 body {
   text-align: start;
-  color: #ffffff;
-  background-color: #18181b;
+  color: #191919;
+  background-color: #ffffff;
 }
 
 body,
 html {
-  font-family: Inter, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-family: "Inter", sans-serif;
   font-size: 14px;
 }
 
@@ -35,32 +34,211 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #ffffff;
   display: flex;
 }
 
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #181818;
-  width: 100%;
-}
-
-.header li a {
+header li a {
   display: block;
+  color: #191919;
   text-align: start;
   font-size: 14px;
   padding: 20px;
   text-decoration: none;
-  color: #ffffff;
-  transition: color 2s 50ms;
+  transition: border 250ms ease-out;
+  border-bottom: 2px solid rgba(255, 255, 255, 0);
 }
 
-.header li a:hover {
-  color: #ffffff;
-  opacity: 75%;
+header li a:hover {
+  border-bottom: 2px solid rgba(44, 44, 44, 0.8);
 }
 
-@media screen and (max-width: 640px) {
+.header {
+  border-bottom: 2px solid rgba(44, 44, 44, 0.7);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+}
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+}
+
+.socials svg path {
+  fill: #212121;
+}
+
+.socials svg path:hover {
+  fill: #6f6f71;
+}
+
+.hero {
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  font-family: "Space Grotesk", sans-serif;
+  border-bottom: 2px solid rgba(44, 44, 44, 0.7);
+  align-items: center;
+}
+
+.my-face {
+  width: 200px;
+  height: 200px;
+}
+
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 23.324px;
+  font-weight: 400;
+}
+
+h5 {
+  font-size: 18.662px;
+  font-weight: 400;
+}
+
+.highlight {
+  color: #000000;
+  font-weight: 500;
+}
+
+.about-me {
+  padding: 20px 0;
+  border-bottom: 2px solid rgba(44, 44, 44, 0.7);
+}
+
+.ab-font {
+  font-weight: bold;
+}
+
+.about-me a {
+  color: #4345b6;
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+.about-me a:hover {
+  text-decoration: none;
+}
+
+.ab-content {
+  margin: 16px 0;
+}
+
+.ab-content p {
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.skills {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 97px;
+  border-bottom: 2px solid rgba(44, 44, 44, 0.7);
+  padding: 30px 0;
+  gap: 10px;
+  overflow-x: auto;
+}
+
+.skills p {
+  font-size: 30px;
+  height: 36px;
+  font-family: "Inter", sans-serif;
+  color: #3f3f3f;
+  font-weight: bold;
+}
+
+.topic h5 {
+  font-family: "Inter", sans-serif;
+  font-size: 18.622px;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.topic p {
+  font-size: 16px;
+  height: 20px;
+  margin: 16px 0;
+}
+
+.my-links {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0;
+  gap: 5px;
+}
+
+.btn-link button {
+  cursor: pointer;
+  border: 1px solid #212121;
+  border-radius: 333px;
+  height: 30px;
+  width: 150px;
+  background-color: #212121;
+  color: #f6f6f6;
+  font-size: 16px;
+  transition: width 1s;
+  transition: background-color 2s 50ms;
+}
+
+.btn-link button:hover {
+  background-color: #616161;
+  width: 140px;
+}
+
+.btn-link {
+  width: 100%;
+}
+
+footer {
+  background-color: #212121;
+  height: 46px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.name {
+  color: #f6f6f6;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.copyright {
+  font-size: 15px;
+  color: rgb(167, 167, 167);
+}
+
+.spacer {
+  height: 20px;
+}
+
+@media screen and (max-width: 1195px) {
+  .my-links {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .btn-link {
+    width: 80%;
+  }
+
+  .container {
+    width: 100%;
+  }
 }
