--- a/main.css
+++ b/main.css
@@ -158,51 +158,14 @@ h5 {
   font-weight: bold;
 }
 
-.topic h5 {
-  font-family: "Inter", sans-serif;
-  font-size: 18.622px;
-  font-weight: bold;
-  margin: 20px 0;
-}
-
-.topic p {
-  font-size: 16px;
-  height: 20px;
-  margin: 16px 0;
-}
-
-.my-links {
-  display: flex;
-  flex-direction: column;
+.projects h5 {
   padding: 20px 0;
-  gap: 5px;
-}
-
-.btn-link button {
-  cursor: pointer;
-  border: 1px solid #212121;
-  border-radius: 333px;
-  height: 30px;
-  width: 150px;
-  background-color: #212121;
-  color: #f6f6f6;
-  font-size: 16px;
-  transition: width 1s;
-  transition: background-color 2s 50ms;
-}
-
-.btn-link button:hover {
-  background-color: #616161;
-  width: 140px;
-}
-
-.btn-link {
-  width: 100%;
+  font-weight: bold;
 }
 
 footer {
   background-color: #212121;
-  height: 46px;
+  height: 50px;
 }
 
 .footer {
@@ -229,15 +192,6 @@ footer {
 }
 
 @media screen and (max-width: 1195px) {
-  .my-links {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .btn-link {
-    width: 80%;
-  }
-
   .container {
     width: 100%;
   }
